챕터9클래스 캡슐화 수정